--- a/如何知道內向的人喜歡你/index.html
+++ b/如何知道內向的人喜歡你/index.html
@@ -87,15 +87,13 @@
 
 <p>內向的人通常不善於表達自己的情感，但這並不代表他們不會表現出對你的好感。事實上，內向的人可能會通過一些微妙的方式來展示自己的關心和喜歡。例如，他們可能會在你身邊出現得更多，可能是無意識的行為，但最終會花更多時間和你在一起。</p>
 
-<p>內向的人也可能會通過肢體語言來表現出對你的興趣，例如傾斜、鼻孔張開、嘴唇張開、眉毛揚起、眼睛鼓鼓的等。這些行為可能是無意識的，但卻能夠透露他們的真實情感。此外，內向的人可能會允許你進入他的私人領域，包括身體和情感領域，對於內向的人來說，這是神聖不可侵犯的。</p>
+<p>內向的人會通過肢體語言來表現出對你的興趣，例如傾斜、鼻孔張開、嘴唇張開、眉毛揚起、眼睛鼓鼓的等。這些行為可能是無意識的，但卻能夠透露他們的真實情感。此外，內向的人可能會允許你進入他的私人領域，包括身體和情感領域，對於內向的人來說，這是神聖不可侵犯的。</p>
 
-<p>內向的人也可能會通過一些行為來吸引你的注意，例如在朋友圈分享你感興趣的內容，對你的點讚和評論給予熱情的回應。這些行為可能是他們試圖表現出對你的好感，但又不敢直接表達的方式。</p>
+<p>內向的人會通過一些行為來吸引你的注意，例如在朋友圈分享你感興趣的內容，對你的點讚和評論給予熱情的回應。這些行為可能是他們試圖表現出對你的好感，但又不敢直接表達的方式。</p>
 
-<p>此外，內向的人可能會在你面前表現得有些緊張或笨拙，這是因為他們對你有好感，但又不敢直接表達的緣故。他們可能會試圖通過一些方式來表現出自己的優點，例如唱歌、畫畫或者做手工等。</p>
+<p>內向的人會在你面前表現得有些緊張或笨拙，這是因為他們對你有好感，但又不敢直接表達的緣故。他們可能會試圖通過一些方式來表現出自己的優點，例如唱歌、畫畫或者做手工等。</p>
 
-<p>內向的人也可能會記得你說過的每一句話，甚至是一些微不足道的細節。這是因為他們對你有好感，想要更多地了解你和你的想法。他們可能會通過一些方式來表現出自己的關心，例如送你小禮物或製造驚喜等。</p>
-
-<p>總的來說，內向的人可能會通過一些微妙的方式來表現出對你的好感，但這些方式可能不是那麼明顯。因此，需要仔細觀察和了解他們的行為和情感，才能真正地知道他們是否對你有好感。</p>
+<p>內向的人會記得你說過的每一句話，甚至是一些微不足道的細節。這是因為他們對你有好感，想要更多地了解你和你的想法。他們可能會通過一些方式來表現出自己的關心，例如送你小禮物或製造驚喜等。</p>
 
 <h2>內向的人的肢體語言暗示</h2>
 
@@ -103,13 +101,11 @@
 
 <p>另外，內向的人可能會願意輕輕碰觸你的手臂或肩膀，這表示了某種程度上的信任和舒適感。他們可能會在你面前展現出更加放鬆的一面，這意味著他們對你有一定程度上的信任。</p>
 
-<p>內向的人可能會通過傾身靠近來表達自己的情感。他們可能會不自覺地傾身靠近你，這是一種潛在的親密感表現。同時，他們可能會在跟你交談時保持微笑，這是他們對你有好感的跡象。</p>
+<p>內向的人會通過傾身靠近來表達自己的情感。他們可能會不自覺地傾身靠近你，這是一種潛在的親密感表現。同時，他們可能會在跟你交談時保持微笑，這是他們對你有好感的跡象。</p>
 
-<p>值得注意的是，內向的人可能會需要更多的時間來思考和反應，因此可能不會立即表達出自己的感受。他們可能會通過一些小動作來表達自己的情感，例如摸自己的頭髮或下巴。</p>
+<p>內向的人可能會需要更多的時間來思考和反應，因此可能不會立即表達出自己的感受。他們可能會通過一些小動作來表達自己的情感，例如摸自己的頭髮或下巴。</p>
 
 <p>內向的人可能會在你面前顯得更加謙遜，甚至會自嘲，但這其實是他在試圖吸引你的注意。他們可能會通過一些小禮物或驚喜來表達自己的情感，或者願意等待你很長時間。</p>
-
-<p>總的來說，內向的人的肢體語言暗示可能會比較細微，但卻能夠傳遞出他們對你的情感。他們可能會通過眼神接觸、微笑、傾身靠近、肢體接觸等方式來表達自己的情感。</p>
 
 <h2>內向的人是否願意和你分享他的秘密</h2>
 
@@ -119,9 +115,7 @@
 
 <p>內向的人可能會通過沉默來表達自己的想法和感受，而不是直接說出來。如果你能夠注意到這些間接的信號，他們可能會更願意與你分享自己的秘密。另外，內向的人可能會需要時間來處理和反思自己的經歷和情感，才能決定是否分享自己的秘密。</p>
 
-<p>值得注意的是，內向的人對朋友的定義很高，不喜歡在陌生的人面前裝作熟悉，所以他的朋友圈可能比較小，但每一個都是知己。如果內向的人願意讓你進入他們的小世界，例如分享自己的私人空間或邀請你參加活動，這是一個強烈的暗示，表示他們對你有好感。</p>
-
-<p>總的來說，內向的人是否願意和你分享他的秘密，取決於你是否能夠讓他們感到安全和信任。如果你能夠建立起這種關係，他們可能會願意和你分享自己的秘密和想法。</p>
+<p>內向的人對朋友的定義很高，不喜歡在陌生的人面前裝作熟悉，所以他的朋友圈可能比較小，但每一個都是知己。如果內向的人願意讓你進入他們的小世界，例如分享自己的私人空間或邀請你參加活動，這是一個強烈的暗示，表示他們對你有好感。</p>
 
 <h2>內向的人對你的話題是否特別感興趣</h2>
 
@@ -129,11 +123,9 @@
 
 <p>內向的人可能不善於表達自己對話題的興趣，但如果他們感興趣，會表現出濃厚的興趣。他們可能需要時間來思考和回應你的話題，所以不要因為他們沒有立即回應就認為他們不感興趣。另外，內向的人可能會通過寫作或其他方式來表達自己的想法和感受，所以也可以嘗試與他們進行書面交流。</p>
 
-<p>值得注意的是，內向的人對話題的興趣取決於是否有明確的主題性。如果是在一群有共同目標、興趣、利益的朋友圈裡，他們就如魚得水，可以興高采烈的一直講。因此，如果你想知道內向的人是否對你的話題特別感興趣，可以嘗試與他們討論一些與他們的興趣相關的話題，看看他們是否會表現出興趣和熱情。</p>
+<p>內向的人對話題的興趣取決於是否有明確的主題性。如果是在一群有共同目標、興趣、利益的朋友圈裡，他們就如魚得水，可以興高采烈的一直講。因此，如果你想知道內向的人是否對你的話題特別感興趣，可以嘗試與他們討論一些與他們的興趣相關的話題，看看他們是否會表現出興趣和熱情。</p>
 
 <p>另外，內向的人可能會對感興趣的話題有更深入的了解和思考，因此可以透過聊天來建立更深入的關係。他們可能需要時間來處理外部刺激，因此可能需要更多時間來回應對話。但是，如果你能夠與他們建立起深厚的關係，他們就會變得更加開放和健談。</p>
-
-<p>總的來說，內向的人對你的話題是否特別感興趣，取決於你是否能夠與他們建立起深厚的關係，和是否能夠與他們討論一些與他們的興趣相關的話題。如果你能夠做到這兩點，就能夠與內向的人建立起良好的關係，並且知道他們是否對你的話題特別感興趣。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
