--- a/愛的定義是什麼/index.html
+++ b/愛的定義是什麼/index.html
@@ -94,7 +94,7 @@
 
 <p>愛是一種能力，是一種近乎信仰的實踐，需要紀律、專注、耐性和練習缺一不可。愛的基本元素包括照顧、責任、尊重和了解，是所有愛的形式共有的特質。愛的對象可以是人、神、自己等不同形式，但都需要以愛和照顧為動機的了解和尊重。</p>
 
-<p>愛是一種合一的體驗，愛上帝既不是在思想中了解上帝，也不是心中存有愛上帝的意念，而是繫於和上帝合一的體驗。愛的理論包括愛的基本元素、愛的對象、愛的實踐等方面，都是以愛和照顧為核心的。愛是一種藝術，一門易學難精，需要知識和努力的藝術。</p>
+<p>愛的理論包括愛的基本元素、愛的對象、愛的實踐等方面，都是以愛和照顧為核心的。愛是一種藝術，一門易學難精，需要知識和努力的藝術。</p>
 
 <h2>愛情的本質是什麼？</h2>
 
@@ -124,14 +124,6 @@
 
 <p>表達愛的方式有很多種，無論是通過言語、行動還是禮物，都可以讓對方感受到你的愛意。其中，肯定言語是表達愛的一種重要方式，口頭讚揚、鼓勵或欣賞，都是愛的有力溝通工具。正面的話語，比嘮叨、挑剔的話更能激勵伴侶做些你喜歡的事。</p>
 
-<p>精心的時刻也是表達愛的一種方式，即是將注意力全都放在伴侶身上。無論是簡單的去散步、去吃飯，眼睛看著對方而不是手機，全心全意陪對方聊天，用同理心營造友善、不批評的二人世界，好讓彼此放心分享自己的經歷、想法、感覺、願望等。</p>
-
-<p>真心的禮物也是表達愛的一種方式，禮物，是一種「看得見、摸得到」的愛，是否值錢、買來的或自製的都無關緊要，重要的是能令對方想起你。可以先列一張清單，寫出過往伴侶收到甚麼感興奮的禮物，包括是你或親友送的，以了解對方喜歡收到甚麼。</p>
-
-<p>服務的行動也是表達愛的一種方式，某些人視實際的幫助比甜言蜜語更為重要。真誠地為對方辦事，如煮飯、做家務等，用行動切實地讓對方感受到被重視及照顧。提供服務時，請盡量記住伴侶的習慣及喜惡，利用你的長處，把握機會增加「服務量」。</p>
-
-<p>身體的接觸也是表達愛的一種方式，說到伴侶間的身體接觸，一般會聯想到性，但其實牽手、接吻、擁抱等都是愛的溝通方式，都能向對方傳達關心、安慰、支持及親密的感覺，有助建立情感上的連結。透過身體接觸來表達愛意時，切記要用心表達感情，例如當擁抱時，要讓對方感受到你的愛和關心，而不是機械式完成一個動作而已。</p>
-
 <h3>溝通是愛的表現</h3>
 
 <p>良好的溝通是一種愛的表現，良好的溝通促進夫妻間的默契和尊重，減少衝突，增進愛情，打開通往人類親密關係最高境界的大門。用愛溝通的方法包括十二使徒定額組的馬文‧艾希頓長老指出我們能夠學習更多用愛溝通的方法：「我祈求天父幫助我們藉著願意犧牲，願意聆聽，願意說出內心的感覺，願意避免論斷，願意保持信任，願意鍛鍊耐性等，在家中作更有效的溝通。」</p>
@@ -140,7 +132,7 @@
 
 <p>傾聽對方說話時，應該注意自己的身體語言，可以點點頭或說「我知道」、「嗯」等，表明正在聽。十二使徒定額組的羅素‧納爾遜長老勸告我們：「用點時間談話是保持溝通管道暢通的關鍵。假如婚姻是生命中最重要的一環，那麼就值得你投注時間！」</p>
 
-<p>另外，提問也是傾聽的一部分，邀請配偶交談時可以先問對方：「你好像有什麼心事，要不要談一談嗎？」有些丈夫或妻子會規避衝突，不願意說出自己的想法和感受，怕造成不和，也因此不會分享敏感的話題。</p>
+<p>提問也是傾聽的一部分，邀請配偶交談時可以先問對方：「你好像有什麼心事，要不要談一談嗎？」有些丈夫或妻子會規避衝突，不願意說出自己的想法和感受，怕造成不和，也因此不會分享敏感的話題。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
