--- a/為什麼會對一個人有感覺/index.html
+++ b/為什麼會對一個人有感覺/index.html
@@ -87,11 +87,11 @@
 
 <p>喜歡上一個人的關鍵因素是多方面的，包括相似性、外表吸引力、態度和價值觀、性格、互補性等。相似性是人們喜歡與自己相似的人，包括背景、興趣、品位等方面的相似。外表吸引力是人們喜歡上一個人的重要因素之一，尤其是在初識時。態度和價值觀、性格、互補性等也會影響人們對他人的喜好。</p>
 
-<p>另外，研究指出，接近性效應、單純曝光效應、相似性效應等也會影響人們對他人的喜好。接近性效應指的是兩個人之間要產生良好的關係，就必須具備物理上的「接近」；或是說，兩人所在的位置愈接近，彼此的關係就容易愈好。單純曝光效應指的是我們對於另一個陌生人，或是不熟悉的事物，只要多遇見幾次，即使沒有額外的認識，我們對他（它）的好感度就會提升。</p>
+<p>研究指出，接近性效應、單純曝光效應、相似性效應等也會影響人們對他人的喜好。接近性效應指的是兩個人之間要產生良好的關係，就必須具備物理上的「接近」；或是說，兩人所在的位置愈接近，彼此的關係就容易愈好。單純曝光效應指的是我們對於另一個陌生人，或是不熟悉的事物，只要多遇見幾次，即使沒有額外的認識，我們對他（它）的好感度就會提升。</p>
 
 <p>人際關係的建立也需要信任、情感連結、深度理解和共享。信任是親密關係的核心，是建立在互相依賴、誠實和可靠性的基礎上的情感。情感連結是親密關係的另一個重要要素，當我們與對方分享情感經歷時，我們會感到更深入的連結和理解。深度理解是親密關係的另一個關鍵因素，當我們能夠理解對方的需求、慾望和價值觀時，我們會感到更深入的連結和理解。</p>
 
-<p>此外，互相支持、尊重和界限也是親密關係的重要要素。互相支持是指當我們感受到對方的支持時，我們會感到更安全和更有信心。尊重和界限是指當我們尊重對方的界限和個人空間時，我們會感到更深入的連結和理解。</p>
+<p>互相支持、尊重和界限也是親密關係的重要要素。互相支持是指當我們感受到對方的支持時，我們會感到更安全和更有信心。尊重和界限是指當我們尊重對方的界限和個人空間時，我們會感到更深入的連結和理解。</p>
 
 <h2>為什麼相似度對於戀愛至關重要？</h2>
 
@@ -99,7 +99,7 @@
 
 <p>相似度還可以讓雙方更容易溝通和建立共同的目標。當兩個人有相似的溝通風格和語言時，會讓雙方更容易理解彼此的需求和感受。同時，相似度也可以讓雙方更容易建立共同的目標和價值觀，從而增加彼此的合作和互助。</p>
 
-<p>此外，相似度也可以讓雙方更容易處理衝突。當兩個人有相似的衝突處理方式時，會讓雙方更容易理解彼此的需求和感受，從而增加彼此的親密感和信任。研究也發現，相似度高的伴侶更容易產生親近感和共鳴，從而促進戀愛關係的長久性。</p>
+<p>相似度也可以讓雙方更容易處理衝突。當兩個人有相似的衝突處理方式時，會讓雙方更容易理解彼此的需求和感受，從而增加彼此的親密感和信任。研究也發現，相似度高的伴侶更容易產生親近感和共鳴，從而促進戀愛關係的長久性。</p>
 
 <p>大腦同步性也是相似度的一個重要方面。研究發現，夫妻大腦活動的相似性與婚姻幸福感有關。當夫妻觀看與婚姻相關的影片時，認為其關係滿意度較高的夫妻具有更多的神經同步性，也就是說，在影片播放的相同時間點，他們的大腦有相似的活動。</p>
 
@@ -117,7 +117,7 @@
 
 <p>因此，在戀愛中，我們需要注意自己的投射和投資行為，確保我們的期待和投資是基於對方的真實情況，而不是我們自己的理想化的投射。只有當我們能夠真正地了解和接受對方，我們才能建立起健康和平衡的關係。</p>
 
-<p>另外，投射也可能是因為內心的不安全感和自我價值的缺乏，導致我們需要從對方身上得到肯定和認可。投資也可能是因為內心的需求和期待，希望能夠得到對方的愛和認可，進而投入更多的時間和精力到對方身上。</p>
+<p>投射也可能是因為內心的不安全感和自我價值的缺乏，導致我們需要從對方身上得到肯定和認可。投資也可能是因為內心的需求和期待，希望能夠得到對方的愛和認可，進而投入更多的時間和精力到對方身上。</p>
 
 <p>在戀愛中，投射和投資是兩個相互作用的因素，投射是由我們的想像所驅動的，而投資是由我們的行為所驅動的。只有當投射和投資相互作用的時候，喜歡的感覺才會產生。</p>
 
@@ -129,7 +129,7 @@
 
 <p>戀愛的感覺也會影響人們的生理反應，包括心跳加速、瞳孔放大、血壓升高等。這些反應是由於大腦的交感神經受到刺激所致，讓人們感到興奮、愉悅和依戀。</p>
 
-<p>此外，戀愛的感覺還會影響人們的荷爾蒙分泌，包括可體松（壓力荷爾蒙皮質醇）、睪固酮和催產素等。這些荷爾蒙的變化會使人們感受到不同的情感和生理反應，例如食慾下降、失眠等。</p>
+<p>戀愛的感覺還會影響人們的荷爾蒙分泌，包括可體松（壓力荷爾蒙皮質醇）、睪固酮和催產素等。這些荷爾蒙的變化會使人們感受到不同的情感和生理反應，例如食慾下降、失眠等。</p>
 
 <p>戀愛的感覺是一種主觀的情感體驗，可以被觸發，但不一定需要具備親密關係、激情和承諾等要素。它是一種個體的主觀體驗，讓人們感受到強烈的吸引力和依戀感。</p>
 
