--- a/塔羅牌是什麼原理/index.html
+++ b/塔羅牌是什麼原理/index.html
@@ -125,11 +125,11 @@
 
 <p>在學習塔羅牌的過程中，直覺是非常重要的。Lori Dyan強調，學習塔羅牌最好的方式就是相信你的直覺。塔羅牌只是一個工具，真正的療癒則是由你自己完成。因此，需要保持開放的心態和相信自己的智慧。</p>
 
-<p>另外，熟悉每一張牌也是非常重要的。Rachel Howe建議，每天抽一張牌，花點時間思考這張牌的意義。如果你在早上抽牌，還可以在一天當中不斷地回想這張牌的意思。同時，使用教學手冊或線上資源（例如Biddy Tarot）來解讀牌義也是非常有幫助的。</p>
+<p>熟悉每一張牌也是非常重要的。Rachel Howe建議，每天抽一張牌，花點時間思考這張牌的意義。如果你在早上抽牌，還可以在一天當中不斷地回想這張牌的意思。同時，使用教學手冊或線上資源（例如Biddy Tarot）來解讀牌義也是非常有幫助的。</p>
 
 <p>在塔羅牌的應用中，需要注意的是，塔羅牌無法用來預測未來。Dyan說，塔羅牌不會預測你無法控制的事情，也不會預測死亡或造成不行——你擁有自由意志，可以利用塔羅牌提供的指引來開創自己的道路。因此，需要專注解讀每個訊息的品質，而不是抽取幾張牌的數量。</p>
 
-<p>最後，需要注意的是，塔羅牌的學習與應用需要長時間的練習和實踐。只有通過不斷的學習和實踐，才能夠掌握塔羅牌的真諦和應用。同時，也需要注意塔羅牌的學習與應用需要根據個人的經驗和直覺來進行。</p>
+<p>塔羅牌的學習與應用需要長時間的練習和實踐。只有通過不斷的學習和實踐，才能夠掌握塔羅牌的真諦和應用。同時，也需要注意塔羅牌的學習與應用需要根據個人的經驗和直覺來進行。</p>
 
 <h3>牌義的掌握度是關鍵</h3>
 
