--- a/如何確定愛一個人/index.html
+++ b/如何確定愛一個人/index.html
@@ -91,7 +91,7 @@
 
 <p>自我觀察是認識自己情感的重要方法。自我觀察是指對自己的內部經驗、感受、想法等進行觀察和分析。通過自我觀察，我們可以更好地了解自己的情緒狀態和情感需求。例如，我們可以觀察自己的情緒變化，了解自己在什麼情況下會感到開心或悲傷。</p>
 
-<p>另外，自我反省也是認識自己情感的重要方法。自我反省是指定期花時間回顧和反思自己的行動和經驗，思考自己的優點、缺點和成長機會。通過自我反省，我們可以更好地了解自己的情感和需要，並更好地管理自己的情緒和應對壓力。</p>
+<p>自我反省也是認識自己情感的重要方法。自我反省是指定期花時間回顧和反思自己的行動和經驗，思考自己的優點、缺點和成長機會。通過自我反省，我們可以更好地了解自己的情感和需要，並更好地管理自己的情緒和應對壓力。</p>
 
 <p>情感覺察是指對自己的情感進行覺察和認識，包括了解自己的情感需求、情感模式和情感反應。這有助於我們更好地理解自己的情感和需要，並更好地管理自己的情緒和應對壓力。例如，我們可以觀察自己的情感反應，了解自己在什麼情況下會感到恐懼或焦慮。</p>
 
@@ -141,7 +141,7 @@
 
 <p>然而，內心的感受和直覺也可能被忽略或忽視。有些人感受不到被愛，是因為自身有著「擔心被害」的傾向，總是害怕對方會傷害自己，時刻小心翼翼地觀察著對方是否在哪一點上虧待了自己，甚至背叛了自己。在這種過度恐懼、想要自保的心理狀態下，他們無法感受和接受到對方真實的好意。</p>
 
-<p>因此，內心的感受和直覺需要被重視和培養。唯有真正懂得一個人，才能給予彼此真正的需要。唯有建立在默契和理解的基礎上，才能達到愛的最高境界。唯有相互的理解和尊重，才能給予彼此相對的自由。</p>
+<p>內心的感受和直覺需要被重視和培養。唯有真正懂得一個人，才能給予彼此真正的需要。唯有建立在默契和理解的基礎上，才能達到愛的最高境界。唯有相互的理解和尊重，才能給予彼此相對的自由。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
