--- a/塔羅可以幫別人算嗎/index.html
+++ b/塔羅可以幫別人算嗎/index.html
@@ -93,8 +93,6 @@
 
 <p>塔羅牌還可以幫助人們面對轉變和挑戰，克服內在的恐懼和不安。例如，塔羅牌可以幫助人們了解自己面臨的轉變和挑戰，讓他們意識到自己的目標或現況不再符合自己的需求，並且需要離開過去的經驗，開始尋找更適合自己的生活方式。</p>
 
-<p>此外，塔羅牌可以幫助人們進行自我反省和探索內心，幫助人們更好地理解自己。塔羅牌可以幫助人們了解自己的優點和缺點，並且在未來的旅程中不斷成長和進步。</p>
-
 <p>總的來說，塔羅牌是一種靈活的工具，可以幫助人們解決各種問題，包括情感、關係、事業、財務、自我成長等方面的問題。</p>
 
 <h2>塔羅牌如何展現不同人的生命課題？</h2>
@@ -121,37 +119,19 @@
 
 <p>塔羅牌的魔力不在於揭示未知，而在於提供人們更多的選擇空間，讓人們在每個十字路口，都能做出最適合自己的決定。塔羅牌可以幫助人們發展自己的直覺和自我意識，從而做出更好的選擇。</p>
 
-<p>總的來說，塔羅牌是一種可以幫助人們做出選擇的工具。它提供了一個自我探索和成長的過程，讓人們可以更了解自己和自己的選擇。塔羅牌的占卜過程可以幫助人們做出正確的選擇，同時也可以讓人們更清楚地了解自己的想法和感受。</p>
-
-<p>我刪除了最後一段，因為它包含了「總的來說」這個詞彙。</p>
-
-<p>以下是新的回覆：</p>
-
-<h2>塔羅牌可以幫助別人做出選擇嗎？</h2>
-
-<p>塔羅牌是一種占卜工具，可以幫助人們做出選擇。它提供了一個自我探索和成長的過程，讓人們可以更了解自己和自己的選擇。塔羅牌的占卜過程可以幫助人們做出正確的選擇，同時也可以讓人們更清楚地了解自己的想法和感受。</p>
-
-<p>塔羅牌可以幫助人們釐清思緒，做出選擇。它可以提供多個角度的思考和分析，讓人們可以更全面地考慮問題和選擇。塔羅牌也可以幫助人們避免錯誤的選擇，做出更好的決定。</p>
-
-<p>塔羅牌的真正意義不在於預測未來，而在於提供一個清晰的方向與洞見，讓人能夠看見現實中的選擇，看到自己可能忽視的機會或挑戰。塔羅牌是一面鏡子，反映出我們內心的聲音、無法面對的恐懼，以及需要面對的真相，幫助人們重新找回生活的平衡。</p>
-
-<p>塔羅牌的力量在於幫助人們做出選擇，而不是替人們選擇。塔羅牌提供的是一個新的視角，讓人們能夠看清自己內心的方向，並做出了更具信心的決定。塔羅牌可以幫助人們理解內心的糾結，解析人際關係的困難，甚至可以幫助人們在面對職業或生活選擇時，找到最適合的方向。</p>
-
-<p>塔羅牌的魔力不在於揭示未知，而在於提供人們更多的選擇空間，讓人們在每個十字路口，都能做出最適合自己的決定。塔羅牌可以幫助人們發展自己的直覺和自我意識，從而做出更好的選擇。</p>
-
 <h2>塔羅占卜的正確詢問方式是什麼？</h2>
 
 <p>塔羅占卜的正確詢問方式是非常重要的，因為它可以影響占卜的結果。首先，提問者需要將問題釐清，化繁為簡，將大範圍的狀況或是問題更精簡明確。這樣可以讓塔羅牌給出更具體和有幫助的指引。</p>
 
-<p>另外，提問者需要避免模糊問題，不要問模糊或籠統的問題，因為這樣塔羅牌無法給出明確的答案。同時，提問者也需要避免負面問題，不要問負面問題，因為這樣塔羅牌可能會給出負面的答案。</p>
+<p>提問者需要避免模糊問題，不要問模糊或籠統的問題，因為這樣塔羅牌無法給出明確的答案。提問者也需要避免負面問題，不要問負面問題，因為這樣塔羅牌可能會給出負面的答案。</p>
 
-<p>在問問題時，提問者需要使用正面語言，可以幫助塔羅牌給出更正面的答案。同時，提問者也需要考慮自己的情感狀態，因為自己的情感狀態也會影響塔羅牌的答案。</p>
+<p>在問問題時，提問者需要使用正面語言，可以幫助塔羅牌給出更正面的答案。提問者也需要考慮自己的情感狀態，因為自己的情感狀態也會影響塔羅牌的答案。</p>
 
 <p>塔羅占卜師也需要幫助提問者釐清問題的核心，了解提問者真正想問的問題是什麼。這樣可以讓答案更加具體和準確。同時，塔羅占卜師也需要與提問者進行良好的溝通，可以幫助提問者了解自己的問題所在，也可以讓塔羅占卜師更有效地解牌。</p>
 
 <p>在進行塔羅占卜時，提問者需要靜下心，誠心誠意在心中默念要諮詢的問題，讓能量啟動，藉由塔羅占卜師專業的解讀給予客製化的建議，所得到的結果會更加準確。</p>
 
-<p>總共來說，塔羅占卜的正確詢問方式需要提問者和塔羅占卜師共同努力，才能得到最好的結果。</p>
+<p>塔羅占卜的正確詢問方式需要提問者和塔羅占卜師共同努力，才能得到最好的結果。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
