--- a/塔羅牌會準的原因/index.html
+++ b/塔羅牌會準的原因/index.html
@@ -87,25 +87,9 @@
 
 <p>塔羅牌的自動化功能是指塔羅牌可以透過潛意識預知未來的事件。這種功能是由潛意識驅動的，潛意識會把生活中的一切自動化處理，這是為了降低繁瑣的思考耗能。例如，你一旦學會了打字，你就不需要每次看著鍵盤才能執行手部的動作了。</p>
 
-<p>塔羅牌的自動化功能還包括記憶功能、統計分析功能和慣性反應功能。潛意識中記錄了所有你做過的每一件事，分門別類的儲存著，有些心理學家認為紀錄鉅細靡遺到胎內都擁有記憶。統計分析功能可以記錄人類的微表情反應，有時候表意識沒有發現的表情動作，潛意識在日積月累的生活中是知道的。慣性反應功能可以讓我們在不知不覺中完成許多複雜的思考和計算，從而得出準確的預測結果。</p>
-
-<p>塔羅牌的自動化功能使塔羅牌能夠預測未來。當你問塔羅牌一個問題時，潛意識便開始分析，你和相關的人接觸和相處的時候，相關人的反應是喜歡和討厭，也分析著你每次追求的慣性，並且對下一次的見面做出推測，像一臺電腦一樣密集的計算之後，推算出能交往或不能交往的答案。</p>
-
-<p>塔羅牌的自動化功能還可以幫助人們更快速和準確地進行占卜和預測，同時也可以提供更深入的分析和建議。塔羅牌的自動化功能需要誠實和客觀的態度，能夠協助人類觀察自己的命運軌跡，做出正確的選擇與判斷。</p>
-
 <h2>統計分析功能在塔羅牌中扮演什麼角色？</h2>
 
 <p>塔羅牌是一種古老的占卜工具，透過牌面的圖案、符號、人物等元素來解讀未來的趨勢和可能性。然而，塔羅牌的占卜結果並非完全隨機，而是有一定的統計學原理在其中。統計分析功能在塔羅牌中扮演著重要的角色，可以幫助占卜師更好地了解牌面的意義和相關性。</p>
-
-<p>首先，統計分析功能可以幫助占卜師了解牌面的分布和頻率。例如，某些牌面的出現頻率較高，可能代表著某種特定的能量或趨勢。透過統計分析，可以了解這些牌面的分布和頻率，從而更好地解讀牌面的意義。</p>
-
-<p>其次，統計分析功能可以幫助占卜師了解牌面之間的相關性。例如，某些牌面經常一起出現，可能代表著某種特定的關係或互動。透過統計分析，可以了解這些牌面之間的相關性，從而更好地解讀牌面的意義。</p>
-
-<p>此外，統計分析功能可以幫助占卜師了解牌面的位置和方向的影響。例如，牌面的位置和方向可能代表著某種特定的能量或趨勢。透過統計分析，可以了解這些牌面的位置和方向的影響，從而更好地解讀牌面的意義。</p>
-
-<p>最後，統計分析功能可以幫助占卜師了解逆向牌的意義。逆向牌代表著牌面的相反意義，透過統計分析，可以了解逆向牌的出現頻率和相關性，從而更好地解讀牌面的意義。</p>
-
-<p>綜合以上所述，統計分析功能在塔羅牌中扮演著重要的角色，可以幫助占卜師更好地了解牌面的意義和相關性，從而提高占卜的準確性和可靠性。</p>
 
 <h2>慣性反應功能如何影響塔羅牌的準確性？</h2>
 
@@ -115,7 +99,7 @@
 
 <p>慣性反應功能需要足夠的資料才能做出準確的預測，因此占卜的問題需要與自己的經驗和記憶相關。塔羅牌占卜的準確性取決於多種因素，包括問問題的方式、集中精力和專注、考慮多種因素、經驗和技巧等。慣性反應功能可能會影響塔羅牌占卜的準確性，但是需要與其他因素結合起來考慮。</p>
 
-<p>另外，慣性反應功能也會受到情緒和先入為主的想法的影響。如果我們的情緒和想法不穩定，慣性反應功能可能會做出錯誤的預測。因此，在塔羅牌占卜中，需要保持開放的心態和平靜的情緒，以便更準確地理解塔羅牌的訊息。</p>
+<p>慣性反應功能也會受到情緒和先入為主的想法的影響。如果我們的情緒和想法不穩定，慣性反應功能可能會做出錯誤的預測。因此，在塔羅牌占卜中，需要保持開放的心態和平靜的情緒，以便更準確地理解塔羅牌的訊息。</p>
 
 <h2>榮格的集體潛意識、原型和共時性如何解釋塔羅牌的準確性？</h2>
 
