--- a/16人格哪个最稀有/index.html
+++ b/16人格哪个最稀有/index.html
@@ -93,17 +93,6 @@
 
 <p>ENFJ人格是第三稀有的類型，具有強烈的領導慾望、能夠快速做出決策、自信和果斷等特質。他們是天生的領導者，能夠激勵和引導他人，具有強烈的同理心和溝通能力。</p>
 
-<p>其他稀有的類型還包括INTJ、ENTP和ENFP等。這些類型的人格特質和稀有度排名如下：</p>
-
-<ul>
-    <li>ENTJ（約1.8%）</li>
-    <li>INFJ（約2.9%）</li>
-    <li>ENFJ（約2.3%）</li>
-    <li>INTJ（約3.1%）</li>
-    <li>ENTP（約3%）</li>
-    <li>ENFP（約3%）</li>
-</ul>
-
 <h2>INFJ（洞察者）的人格特點是什麼？</h2>
 
 <p>INFJ是一種獨特的遠見卓識和完美主義者的混合體。由Ni（內向直覺）主導，INFJ天生具有洞察力，能夠看透表面。他們常常被人道主義事業所吸引，並努力追求社會變革。</p>
@@ -124,7 +113,7 @@
 
 <p>在人際關係上，INFJ類型的人格重視深度的交流和情感連結。他們喜歡與人建立長期的關係，並願意花時間和精力去了解和幫助他人。INFJ類型的人格對自己的價值觀和原則非常堅持，並會努力維護自己的獨立性和自主權。</p>
 
-<p>另一方面，INTJ（內向、直覺、思考、判斷）類型的人格被稱為「建築師」，也是極稀有的類型，僅佔全球男性人口的1.2%、女性人口的0.8%。這類型的人重視自己的獨立性和自主性，並希望能夠創造出新的想法和解決方案。</p>
+<p>INTJ（內向、直覺、思考、判斷）類型的人格被稱為「建築師」，也是極稀有的類型，僅佔全球男性人口的1.2%、女性人口的0.8%。這類型的人重視自己的獨立性和自主性，並希望能夠創造出新的想法和解決方案。</p>
 
 <p>在職業上，INTJ類型的人格常見於科學、技術、工程等領域。他們重視自己的智慧和能力，並希望能夠解決複雜的問題和挑戰。INTJ類型的人格也適合從事需要分析和邏輯的工作，例如科學家、工程師、哲學家等。</p>
 
