--- a/天蠍座跟哪個星座最不配/index.html
+++ b/天蠍座跟哪個星座最不配/index.html
@@ -93,7 +93,7 @@
 
 <p>水瓶座的人喜歡獨立和自由，與天蠍座的控制欲和佔有欲可能會產生衝突。水瓶座的人具有創新和改革的精神，可能會與天蠍座的人產生意見分歧。</p>
 
-<p>另外，天蠍座的人也可能會與金牛座、處女座和巨蟹座的人產生衝突。金牛座的人固執和保守，可能會與天蠍座的人產生意見分歧。處女座的人追求完美和細膩，可能會與天蠍座的人產生衝突。巨蟹座的人情感豐富和敏感，可能會與天蠍座的人產生情感衝突。</p>
+<p>天蠍座的人也可能會與金牛座、處女座和巨蟹座的人產生衝突。金牛座的人固執和保守，可能會與天蠍座的人產生意見分歧。處女座的人追求完美和細膩，可能會與天蠍座的人產生衝突。巨蟹座的人情感豐富和敏感，可能會與天蠍座的人產生情感衝突。</p>
 
 <p>天蠍座的人需要學會控制自己的控制欲和佔有欲，同時也需要學會尊重其他人的自由和獨立性。只有這樣，才能避免與其他星座的人產生衝突，建立和諧的關係。</p>
 
@@ -103,9 +103,9 @@
 
 <p>其中，雙子座就是一個與天蠍座的感情世界不相容的星座。雙子座的多變性格和天蠍座的專一性格會產生衝突，雙子座的不確定性會使天蠍座感到不安和不信任。雙子座的人喜歡追求新鮮感和變化，而天蠍座則喜歡穩定和安全感。這種差異會使雙方的感情生活充滿矛盾和衝突。</p>
 
-<p>另一方面，射手座也是與天蠍座的感情世界不相容的星座。射手座的自由性格和天蠍座的佔有性格會產生衝突，射手座的不喜歡被束縛會使天蠍座感到受傷和不滿。射手座的人喜歡自由和自主，而天蠍座則喜歡控制和掌握一切。這種差異會使雙方的感情生活充滿緊張和衝突。</p>
+<p>射手座也是與天蠍座的感情世界不相容的星座。射手座的自由性格和天蠍座的佔有性格會產生衝突，射手座的不喜歡被束縛會使天蠍座感到受傷和不滿。射手座的人喜歡自由和自主，而天蠍座則喜歡控制和掌握一切。這種差異會使雙方的感情生活充滿緊張和衝突。</p>
 
-<p>此外，水瓶座也是與天蠍座的感情世界不相容的星座。水瓶座的理性性格和天蠍座的情感性格會產生衝突，水瓶座的不善於表達情感會使天蠍座感到孤獨和不被理解。水瓶座的人喜歡用理性來處理感情問題，而天蠍座則喜歡用情感來處理感情問題。這種差異會使雙方的感情生活充滿隔閡和誤解。</p>
+<p>水瓶座也是與天蠍座的感情世界不相容的星座。水瓶座的理性性格和天蠍座的情感性格會產生衝突，水瓶座的不善於表達情感會使天蠍座感到孤獨和不被理解。水瓶座的人喜歡用理性來處理感情問題，而天蠍座則喜歡用情感來處理感情問題。這種差異會使雙方的感情生活充滿隔閡和誤解。</p>
 
 <p>綜合來看，天蠍座的感情世界與雙子座、射手座和水瓶座最不相容。這些星座的差異會使天蠍座感到不安、不信任和不滿，從而導致感情生活的不幸福和不美滿。</p>
 
@@ -113,7 +113,7 @@
 
 <p>天蠍座與火象星座的不合主要在於性格上的差異。天蠍座的人一向是外冷內熱，但火象星座的人，如白羊座，卻是如孩子般直言無諱，因此兩個人相處起來有些費力。</p>
 
-<p>另外，天蠍座的獨占欲、支配欲都很強，這與火象星座的人強烈的自我意識和獨立性格會產生衝突。火象星座的人不喜歡被控制和束縛，這會使天蠍座的人感到不安和不信任。</p>
+<p>天蠍座的獨占欲、支配欲都很強，這與火象星座的人強烈的自我意識和獨立性格會產生衝突。火象星座的人不喜歡被控制和束縛，這會使天蠍座的人感到不安和不信任。</p>
 
 <p>天蠍座的人重視深度和真誠，希望能夠與對方建立起相互付出的良好關係；而火象星座的人則重視行動和勇氣，需要主動接近對方並坦率表達自己的想法。這種差異會導致溝通不暢和誤會。</p>
 
