--- a/塔羅正逆位怎麼看/index.html
+++ b/塔羅正逆位怎麼看/index.html
@@ -117,9 +117,9 @@
 
 <p>逆位牌也可能代表時機未到。如果問的問題跟「時間點」有關係，逆位可能就與時機有關係。例如，個案詢問三個月內是否能遇到對象，抽到的牌是聖杯一逆位，可能代表「時機未到」，找不到適合的人可以開啟新關係。</p>
 
-<p>另外，逆位牌也可能代表負面狀態。利用元素的正負面狀態去判斷牌義。例如，火元素的正面是積極、正義感、有目標、行動力強，而負面是暴躁、控制欲、不受控、火暴脾氣。水元素的正面是共感力強、有同理心、包容力強，而負面是多愁善感、情緒起伏不定、憂鬱難猜測。</p>
+<p>逆位牌也可能代表負面狀態。利用元素的正負面狀態去判斷牌義。例如，火元素的正面是積極、正義感、有目標、行動力強，而負面是暴躁、控制欲、不受控、火暴脾氣。水元素的正面是共感力強、有同理心、包容力強，而負面是多愁善感、情緒起伏不定、憂鬱難猜測。</p>
 
-<p>最後，逆位牌可能代表學習與適應的需要。例如，寶劍侍者逆位可能代表問卜者在新工作會有點適應不良，導致她可能變成一個容易抱怨際遇不如意的狀態，嚴重的狀況可能會與同事間互動出現問題。</p>
+<p>逆位牌可能代表學習與適應的需要。例如，寶劍侍者逆位可能代表問卜者在新工作會有點適應不良，導致她可能變成一個容易抱怨際遇不如意的狀態，嚴重的狀況可能會與同事間互動出現問題。</p>
 
 <p>逆位牌的含義還可以從能量的角度來理解。逆位牌代表的是內部能量，而不是外部能量。例如，正位皇后可能代表照顧別人，而皇后逆位可能代表照顧自己。為了簡化方法，請使用塔羅牌的正位含義，然後在解釋中添加“自我”或“私人”。</p>
 
@@ -127,7 +127,7 @@
 
 <p>能量的抑制也是逆位牌的含義之一。能量通常會出現在我們的生活中，但會被阻塞或無法以最有建設性的方式表達出來。例如，節制逆位可能表示您正在尋求生活中的節制與和諧，但現在，以積極的方式充分體驗這種能量存在的障礙。問：“您實現節制與和諧的方式是什麼？”也就是說，找出阻礙能量的因素。</p>
 
-<p>最後，逆位牌的含義也可以通過倒置圖像來理解。如果塔羅牌以逆位出現，請查看該上下顛倒的卡片上的圖像，然後直觀地了解您的情況。例如，寶劍十逆位，看起來劍好像從男人的背上掉下來了。也許過去所造成的痛苦現在終於得以釋放，可以進入一個新的周期。</p>
+<p>逆位牌的含義也可以通過倒置圖像來理解。如果塔羅牌以逆位出現，請查看該上下顛倒的卡片上的圖像，然後直觀地了解您的情況。例如，寶劍十逆位，看起來劍好像從男人的背上掉下來了。也許過去所造成的痛苦現在終於得以釋放，可以進入一個新的周期。</p>
 
 <h2>塔羅牌逆位的解讀原則是什麼？</h2>
 
