--- a/塔羅牌不能問什麼/index.html
+++ b/塔羅牌不能問什麼/index.html
@@ -87,32 +87,19 @@
 
 <p>塔羅牌占卜是一種神秘的工具，可以幫助人們了解自己和未來的趨勢。然而，並不是所有的問題都適合用塔羅牌來詢問。有些問題可能太過籠統、太過簡單或太過迂迴，無法得到準確的答案。</p>
 
-<p>首先，塔羅牌不能用來詢問健康問題。健康問題往往源自於心理狀態，而塔羅牌只能協助找到心理狀態的源頭，不能直接解決健康問題。例如，問「我是否會得病？」或「我該怎麼治療我的疾病？」這類問題，不適合用塔羅牌來詢問。相反，應該尋求專業醫師的評估和治療。</p>
+<p>塔羅牌不能用來詢問健康問題。健康問題往往源自於心理狀態，而塔羅牌只能協助找到心理狀態的源頭，不能直接解決健康問題。例如，問「我是否會得病？」或「我該怎麼治療我的疾病？」這類問題，不適合用塔羅牌來詢問。相反，應該尋求專業醫師的評估和治療。</p>
 
-<p>其次，塔羅牌不能用來詢問過去的事情。塔羅牌是用來 卜術，不是拿來窺探過去或測試的工具。聚焦在未來或現在能夠做什麼來達到目標，才是塔羅牌占卜的正確用途。例如，問「我過去是否做錯了什麼？」或「我該怎麼弥补過去的錯誤？」這類問題，不適合用塔羅牌來詢問。</p>
+<p>塔羅牌不能用來詢問過去的事情。塔羅牌是用來 卜術，不是拿來窺探過去或測試的工具。聚焦在未來或現在能夠做什麼來達到目標，才是塔羅牌占卜的正確用途。例如，問「我過去是否做錯了什麼？」或「我該怎麼弥补過去的錯誤？」這類問題，不適合用塔羅牌來詢問。</p>
 
-<p>另外，塔羅牌不能用來詢問太長遠的未來。塔羅牌不是命術，只能看短時間內做的每件事情的累積和執行的選擇。建議聚焦在事件和現在能夠做什麼來改善，才是塔羅牌占卜的正確用途。例如，問「我未來十年是否會成功？」或「我該怎麼樣才能在未來十年內實現我的目標？」這類問題，不適合用塔羅牌來詢問。</p>
+<p>塔羅牌不能用來詢問太長遠的未來。塔羅牌不是命術，只能看短時間內做的每件事情的累積和執行的選擇。建議聚焦在事件和現在能夠做什麼來改善，才是塔羅牌占卜的正確用途。例如，問「我未來十年是否會成功？」或「我該怎麼樣才能在未來十年內實現我的目標？」這類問題，不適合用塔羅牌來詢問。</p>
 
-<p>此外，塔羅牌不能用來詢問與你無關的事物。塔羅牌是用來 卜術，需要你是當事人或與事件有直接關係，才能夠得到正確的答案。例如，問「我朋友是否會成功？」或「我該怎麼樣才能幫助我的朋友實現他的目標？」這類問題，不適合用塔羅牌來詢問。</p>
+<p>塔羅牌不能用來詢問與你無關的事物。塔羅牌是用來 卜術，需要你是當事人或與事件有直接關係，才能夠得到正確的答案。例如，問「我朋友是否會成功？」或「我該怎麼樣才能幫助我的朋友實現他的目標？」這類問題，不適合用塔羅牌來詢問。</p>
 
-<p>最後，塔羅牌不能用來詢問瑣碎的日常事情。塔羅牌是用來 卜術，需要你聚焦在重要的事情上，才能夠得到有意義的答案。例如，問「我今天是否該穿什麼衣服？」或「我該怎麼樣才能在今天的會議中表現良好？」這類問題，不適合用塔羅牌來詢問。</p>
-
-<h3>不能問的問題類型</h3>
-
-<p>除了上述的問題類型外，還有一些其他的問題類型不適合用塔羅牌來詢問。例如：</p>
-
-<ul>
-  <li>二元性的問題：例如「是」或「否」、「能」或「不能」等問題。</li>
-  <li>時間點問題：例如「何時」會發生的事。</li>
-  <li>過度情緒化的問題：例如「為什麼他不愛我？」或「我該怎麼樣才能讓他愛我？」等問題。</li>
-  <li>太不明確的問題：例如「我愛情運如何？」或「我該怎麼樣才能實現我的目標？」等問題。</li>
-</ul>
-
-<p>總的來說，塔羅牌占卜需要用來詢問合適的問題，才能提供有用的見解和指引。需要避免問太籠統、太過簡單或太過迂迴的問題，才能得到準確的答案。</p>
+<p>塔羅牌不能用來詢問瑣碎的日常事情。塔羅牌是用來 卜術，需要你聚焦在重要的事情上，才能夠得到有意義的答案。例如，問「我今天是否該穿什麼衣服？」或「我該怎麼樣才能在今天的會議中表現良好？」這類問題，不適合用塔羅牌來詢問。</p>
 
 <h2>塔羅牌占卜需要注意甚麼事項？</h2>
 
-<p>塔羅牌占卜是一種需要注意許多事項的活動。首先，<strong>一定要親手洗牌</strong>，因為塔羅占卜是要反映我們的潛意識，而洗牌的過程會不停注入個人的能量，問出來的答案才會準確。另外，<strong>正常洗牌</strong>即可，不需要刻意地將塔羅牌全散鋪在枱面上，並闔上眼好像洗麻雀般洗牌。</p>
+<p>塔羅牌占卜是一種需要注意許多事項的活動。<strong>一定要親手洗牌</strong>，因為塔羅占卜是要反映我們的潛意識，而洗牌的過程會不停注入個人的能量，問出來的答案才會準確。另外，<strong>正常洗牌</strong>即可，不需要刻意地將塔羅牌全散鋪在枱面上，並闔上眼好像洗麻雀般洗牌。</p>
 
 <p>在洗牌的過程中，<strong>一邊洗牌，一邊清晰地想著一個問題</strong>，這樣可以確保問出來的答案是針對該問題的。另外，<strong>用不慣常的手去抽牌</strong>，如用右手寫字，則用左手抽牌，這樣可以避免慣性思維的影響。</p>
 
@@ -122,7 +109,7 @@
 
 <p>此外，<strong>不可於24小時內重複占卜完全相同的問題</strong>，這樣可以避免重複的答案和誤導。另外，<strong>不可在一次洗牌中問多條問題</strong>，這樣可以避免混淆和誤導。</p>
 
-<p>最後，<strong>塔羅占卜最多只占卜到未來12個月的事</strong>，絕對問不到多於12個月的事情。因此，塔羅牌占卜需要注意許多事項，以確保問出來的答案是準確的。</p>
+<p><strong>塔羅占卜最多只占卜到未來12個月的事</strong>，絕對問不到多於12個月的事情。因此，塔羅牌占卜需要注意許多事項，以確保問出來的答案是準確的。</p>
 
 <h3>牌陣的選擇</h3>
 
@@ -142,23 +129,9 @@
 
 <p>塔羅牌需要定期淨化，以保持能量的潔淨和占卜答案的準確性。淨化塔羅牌的時機點包括：拿到一副新的牌、在兩次讀牌的中間、為自己讀牌，以及對它們冥想時。淨化塔羅牌的方式包括：反覆有節奏的洗牌、用西洋杉、鼠尾草或矮松、白菖蒲將牌薰一次、為牌注入光芒、用絲綢或棉布擦拭、用海鹽雨水來潔淨（限於塑膠材質的牌面）、埋在土裡（七天，或從滿月至新月的第一天），以及將使用過的牌按照順序排放整齊。</p>
 
-<p>另外，塔羅牌也需要避免接觸到水或潮濕的環境，以免損壞牌卡。專業的塔羅師會使用塔羅袋、塔羅盒、塔羅布等基礎配備來保護塔羅牌，延長其壽命。塔羅布用久了會保存占卜時的能量，增加占卜的準確性。因此，塔羅牌需要定期的能量清理，以保持能量的潔淨和占卜答案的準確性。</p>
+<p>塔羅牌也需要避免接觸到水或潮濕的環境，以免損壞牌卡。專業的塔羅師會使用塔羅袋、塔羅盒、塔羅布等基礎配備來保護塔羅牌，延長其壽命。塔羅布用久了會保存占卜時的能量，增加占卜的準確性。因此，塔羅牌需要定期的能量清理，以保持能量的潔淨和占卜答案的準確性。</p>
 
 <p>在淨化塔羅牌時，也可以使用薰香、蠟燭、聖水等方法。薰香能夠去除塔羅牌上的負能量，蠟燭的火能量能夠去除塔羅牌上的負能量，聖水能夠去除塔羅牌上的負能量，鹽則能夠代表土元素，讓牌卡恢復到原始的狀態。牌卡歸位是將塔羅牌按照順序歸位，能夠讓牌卡恢復到原始的狀態。淨化後的開牌儀式能夠讓牌卡恢復到原始的狀態，並讓使用者重新認識牌卡。</p>
-
-<h2>塔羅牌能夠給別人摸到嗎？</h2>
-
-<p>塔羅牌是一份印刷紙牌，不會因為他人觸碰它而「吸收」了他人的氣場、靈感、靈魂等。因此，塔羅牌能夠給別人摸到，並不會影響占卜的結果。</p>
-
-<p>事實上，塔羅牌占卜的過程中，給客戶碰觸到塔羅牌是很常會發生的，並不需要過度擔心負能量的殘留。如果還是很介意會有能量沾附的話，可以在每次占卜流程結束後，利用燃燒過後的白色鼠尾草所產生的煙霧，來進行淨化。</p>
-
-<p>另外，塔羅牌占卜的準確度不會因為別人摸到塔羅牌而受到影響，占卜的結果是透過跟宇宙共振得到的結果，並非是靈異現象。因此，塔羅牌能夠給別人摸到，並不會影響占卜的準確度。</p>
-
-<p>不過，塔羅牌的主人可以自行決定是否允許他人觸碰或觀賞塔羅牌，並不需要遵循特定的規則或儀式。因此，如果對方或自己不願意讓他人觸碰，就不要互相強迫。</p>
-
-<p>總的來說，塔羅牌能夠給別人摸到，並不會影響占卜的結果或準確度。但是，塔羅牌的主人應該清楚地表達其意願和界限，避免他人誤解或觸犯其權益。</p>
-
-<p>我修改了最後一段，避免使用「總而言之」等過渡詞彙，以下是修改後的版本：</p>
 
 <h2>塔羅牌能夠給別人摸到嗎？</h2>
 
