--- a/塔羅牌不能問什麼/index.html
+++ b/塔羅牌不能問什麼/index.html
@@ -87,16 +87,6 @@
 
 <p>塔羅牌占卜是一種神秘的工具，可以幫助人們了解自己和未來的趨勢。然而，並不是所有的問題都適合用塔羅牌來詢問。有些問題可能太過籠統、太過簡單或太過迂迴，無法得到準確的答案。</p>
 
-<p>塔羅牌不能用來詢問健康問題。健康問題往往源自於心理狀態，而塔羅牌只能協助找到心理狀態的源頭，不能直接解決健康問題。例如，問「我是否會得病？」或「我該怎麼治療我的疾病？」這類問題，不適合用塔羅牌來詢問。相反，應該尋求專業醫師的評估和治療。</p>
-
-<p>塔羅牌不能用來詢問過去的事情。塔羅牌是用來 卜術，不是拿來窺探過去或測試的工具。聚焦在未來或現在能夠做什麼來達到目標，才是塔羅牌占卜的正確用途。例如，問「我過去是否做錯了什麼？」或「我該怎麼弥补過去的錯誤？」這類問題，不適合用塔羅牌來詢問。</p>
-
-<p>塔羅牌不能用來詢問太長遠的未來。塔羅牌不是命術，只能看短時間內做的每件事情的累積和執行的選擇。建議聚焦在事件和現在能夠做什麼來改善，才是塔羅牌占卜的正確用途。例如，問「我未來十年是否會成功？」或「我該怎麼樣才能在未來十年內實現我的目標？」這類問題，不適合用塔羅牌來詢問。</p>
-
-<p>塔羅牌不能用來詢問與你無關的事物。塔羅牌是用來 卜術，需要你是當事人或與事件有直接關係，才能夠得到正確的答案。例如，問「我朋友是否會成功？」或「我該怎麼樣才能幫助我的朋友實現他的目標？」這類問題，不適合用塔羅牌來詢問。</p>
-
-<p>塔羅牌不能用來詢問瑣碎的日常事情。塔羅牌是用來 卜術，需要你聚焦在重要的事情上，才能夠得到有意義的答案。例如，問「我今天是否該穿什麼衣服？」或「我該怎麼樣才能在今天的會議中表現良好？」這類問題，不適合用塔羅牌來詢問。</p>
-
 <h2>塔羅牌占卜需要注意甚麼事項？</h2>
 
 <p>塔羅牌占卜是一種需要注意許多事項的活動。<strong>一定要親手洗牌</strong>，因為塔羅占卜是要反映我們的潛意識，而洗牌的過程會不停注入個人的能量，問出來的答案才會準確。另外，<strong>正常洗牌</strong>即可，不需要刻意地將塔羅牌全散鋪在枱面上，並闔上眼好像洗麻雀般洗牌。</p>
@@ -107,7 +97,7 @@
 
 <p>如果有第二條問題想問，<strong>一定要重新再洗牌</strong>，絕不可一個問題任意抽卡，再狂問不同的問題。另外，<strong>占卜結果準確度是根據占卜師所學的知識、技術、經驗及第六靈感</strong>，所以占卜師的能力和經驗是非常重要的。</p>
 
-<p>此外，<strong>不可於24小時內重複占卜完全相同的問題</strong>，這樣可以避免重複的答案和誤導。另外，<strong>不可在一次洗牌中問多條問題</strong>，這樣可以避免混淆和誤導。</p>
+<p><strong>不可於24小時內重複占卜完全相同的問題</strong>，這樣可以避免重複的答案和誤導。另外，<strong>不可在一次洗牌中問多條問題</strong>，這樣可以避免混淆和誤導。</p>
 
 <p><strong>塔羅占卜最多只占卜到未來12個月的事</strong>，絕對問不到多於12個月的事情。因此，塔羅牌占卜需要注意許多事項，以確保問出來的答案是準確的。</p>
 
@@ -139,7 +129,7 @@
 
 <p>事實上，塔羅牌占卜的過程中，給客戶碰觸到塔羅牌是很常會發生的，並不需要過度擔心負能量的殘留。如果還是很介意會有能量沾附的話，可以在每次占卜流程結束後，利用燃燒過後的白色鼠尾草所產生的煙霧，來進行淨化。</p>
 
-<p>另外，塔羅牌占卜的準確度不會因為別人摸到塔羅牌而受到影響，占卜的結果是透過跟宇宙共振得到的結果，並非是靈異現象。因此，塔羅牌能夠給別人摸到，並不會影響占卜的準確度。</p>
+<p>塔羅牌占卜的準確度不會因為別人摸到塔羅牌而受到影響，占卜的結果是透過跟宇宙共振得到的結果，並非是靈異現象。因此，塔羅牌能夠給別人摸到，並不會影響占卜的準確度。</p>
 
 <p>不過，塔羅牌的主人可以自行決定是否允許他人觸碰或觀賞塔羅牌，並不需要遵循特定的規則或儀式。因此，如果對方或自己不願意讓他人觸碰，就不要互相強迫。</p>
 
