--- a/塔羅牌代價/index.html
+++ b/塔羅牌代價/index.html
@@ -89,21 +89,13 @@
 
 <p>塔羅牌代價的形式可以是詢問者獲得不準確的結果，或者是占卜老師被認定不準而失去信任等等。塔羅牌代價的對象可以是詢問者自己，也可以是占卜老師，甚至是雙方都會受到影響。因此，塔羅牌代價的關鍵在於詢問者和占卜老師的誠實和念想，若雙方都能夠以真誠和平常心面對塔羅牌占卜，就可以避免塔羅牌代價的產生。</p>
 
-<p>塔羅牌代價也與占卜師的收費標準有關，收費標準的高低取決於占卜師的經驗、知名度、占卜方式以及占卜的時間長短等。不同的占卜師可能會有不同的收費標準，有些占卜師可能會根據詢問者的需求和占卜的複雜程度來收費。</p>
-
-<p>此外，塔羅牌代價也與占卜師的能量交換守則有關，占卜師在幫助他人時，需要付出自己的能量，若沒有適當的能量交換，可能會導致占卜師的能量耗盡。因此，占卜師需要請求客人提供一些能量回饋，以維持能量平衡。</p>
 
 <h2>塔羅牌占卜的風險和禁忌有哪些？</h2>
 
 <p>塔羅牌占卜是一種古老的占卜方式，但也有一些風險和禁忌需要注意。首先，塔羅牌占卜不能超越12個月的時間限制，否則會失去準確性。另外，不可於24小時內重複占卜完全相同的問題，因為這會導致答案不準確。</p>
 
-<p>塔羅牌占卜也需要注意占卜師的知識、技術、經驗及第六靈感的影響。占卜師的能力和經驗會影響答案的準確度，因此選擇合格的占卜師非常重要。另外，占卜過程中要專注，心無雜念，否則會影響答案的準確度。</p>
 
-<p>塔羅牌占卜還有一些禁忌，例如不可在一次洗牌中問多條問題，因為這會導致答案混亂。另外，不要問健康問題、生死問題、有違道德倫理的事情等，這些問題可能涉及到個人隱私或道德倫理，塔羅牌占卜不宜涉及這些問題。</p>
-
-<p>塔羅牌占卜也需要注意占卜者的態度和動機。如果占卜者對於占卜問題沒有強烈的疑問，或者早已經決定要做了，占卜結果也容易失準。因此，占卜者需要誠心發問，否則占卜結果會失準。</p>
-
-<p>最後，塔羅牌占卜需要注意塔羅牌本身的風險。塔羅牌本質上是一種工具，類似於心理學中的投射測驗。它通過圖像和符號，幫助人們挖掘內心深處的情感和想法。科學與心理學視角下，塔羅牌並不具有神秘力量或危險性，真正的風險來自於使用者的心態和方法。</p>
+<p>塔羅牌占卜需要注意塔羅牌本身的風險。塔羅牌本質上是一種工具，類似於心理學中的投射測驗。它通過圖像和符號，幫助人們挖掘內心深處的情感和想法。科學與心理學視角下，塔羅牌並不具有神秘力量或危險性，真正的風險來自於使用者的心態和方法。</p>
 
 <h3>塔羅牌占卜的風險</h3>
 
@@ -117,27 +109,22 @@
 
 <p>塔羅牌占卜是一種需要謹慎和小心的過程，否則可能會導致誤解和錯誤的結論。因此，進行塔羅牌占卜時需要注意一些事項。</p>
 
-<p>首先，塔羅牌占卜的結果並非絕對，需要占卜師的詮釋和分析。然而，自我詮釋可能會導致誤解和錯誤的結論。因此，務必尋求專業的占卜師進行塔羅牌占卜。</p>
+<p>塔羅牌占卜的結果並非絕對，需要占卜師的詮釋和分析。然而，自我詮釋可能會導致誤解和錯誤的結論。因此，務必尋求專業的占卜師進行塔羅牌占卜。</p>
 
-<p>其次，塔羅牌占卜師的資格和經驗對於占卜結果的準確性至關重要。務必選擇經驗豐富和資格合格的占卜師進行塔羅牌占卜。</p>
+<p>塔羅牌占卜師的資格和經驗對於占卜結果的準確性至關重要。務必選擇經驗豐富和資格合格的占卜師進行塔羅牌占卜。</p>
 
-<p>再者，進行塔羅牌占卜前，務必有明確的問題和需求。這樣可以幫助占卜師更好地理解你的需求，並提供更準確的占卜結果。</p>
+<p>進行塔羅牌占卜前，務必有明確的問題和需求。這樣可以幫助占卜師更好地理解你的需求，並提供更準確的占卜結果。</p>
 
-<p>此外，塔羅牌占卜的時間和空間會影響其結果，了解塔羅牌占卜的時間和空間是進行塔羅牌占卜的重要環節。</p>
+<p>塔羅牌占卜的時間和空間會影響其結果，了解塔羅牌占卜的時間和空間是進行塔羅牌占卜的重要環節。</p>
 
-<p>另外，塔羅牌占卜師需要考慮是否應該為他人預知未來。如果不應該預知，則需要決定如何拒絕客戶的要求，或者如何將問題重述為符合自己的倫理哲學形式。</p>
+<p>塔羅牌占卜師需要考慮是否應該為他人預知未來。如果不應該預知，則需要決定如何拒絕客戶的要求，或者如何將問題重述為符合自己的倫理哲學形式。</p>
 
-<p>最後，塔羅牌占卜師需要確保自己的解讀是完全保密的，但也需要考慮特殊情況，例如客戶可能對自己或他人造成危險，或者客戶詢問違法的事務。</p>
+<p>塔羅牌占卜師需要確保自己的解讀是完全保密的，但也需要考慮特殊情況，例如客戶可能對自己或他人造成危險，或者客戶詢問違法的事務。</p>
 
 <h3>塔羅牌占卜的倫理界限</h3>
 
 <p>塔羅牌占卜師需要考慮自己的倫理界限，例如是否提供醫學、法律、經濟方面的建議。同時，也需要考慮是否接受有關不在場人士的占卜，或者是否接受有關名人的占卜。</p>
 
-<p>塔羅牌占卜師需要確保自己的解讀是客觀的和公正的，不受個人偏見和情感的影響。同時，也需要考慮是否需要得到父母的允許，以及如何保護未成年人的隱私。</p>
-
-<p>塔羅牌占卜師需要保持專業邊界，尊重當事人的選擇權，讓他們自行決定如何看待占卜結果，不強迫接受解讀或建議。</p>
-
-<p>塔羅牌占卜師需要提供正向的鼓勵和支持，避免可能造成恐懼或焦慮的解讀，而是從占卜結果中學習和成長。</p>
 
 <h2>塔羅牌中的安全感是什麼？</h2>
 
@@ -147,7 +134,7 @@
 
 <p>塔羅牌中的安全感也與自我價值和自信心有關。當個人的自我價值和自信心較低時，可能會更需要另一半的安全感和支持。因此，在塔羅牌占卜中，安全感可以作為一個重要的指標，幫助個體了解自己的安全感需求和如何在生活中創造安全感。</p>
 
-<p>此外，塔羅牌中的安全感也與溝通和理解有關。當另一半能夠理解和滿足自己的安全感需求時，可以加強愛情關係中的溝通和理解。因此，塔羅牌占卜可以幫助個體了解到自己在愛情關係中的安全感需求，並找到改善的方法。</p>
+<p>塔羅牌中的安全感也與溝通和理解有關。當另一半能夠理解和滿足自己的安全感需求時，可以加強愛情關係中的溝通和理解。因此，塔羅牌占卜可以幫助個體了解到自己在愛情關係中的安全感需求，並找到改善的方法。</p>
 
 <p>在塔羅牌中，安全感的缺乏可能會導致焦慮、不安全感和不信任等問題。因此，了解自己的安全感需求和如何在生活中創造安全感，是維持健康愛情關係的重要關鍵。</p>
 
