--- a/塔羅牌可以丟棄嗎/index.html
+++ b/塔羅牌可以丟棄嗎/index.html
@@ -113,9 +113,9 @@
 
 <p>還有其他方法，如使用缽、香薰、白水晶、靈氣等，來淨化塔羅牌的能量。例如，可以使用薰香淨化，使用薰香來淨化塔羅牌，可以選擇專門用來淨化的薰香，如鼠尾草、聖木或調配好專門淨化用的薰香。薰香的作用是將塔羅牌的能量頻率提升，讓牌卡恢復到原始的狀態。</p>
 
-<p>此外，也可以使用月光淨化，利用滿月的魔力，將塔羅牌放在窗台或戶外，讓它們在月光下曬一整晚，吸收月亮的正能量，排除累積的負面磁場。或者，可以使用晶石淨化，使用具有強大淨化能力的晶石，如白水晶、紫水晶和黑曜石，將塔羅牌放在晶石上，或將晶石放在塔羅牌周圍，讓它們靜置幾個小時，吸收塔羅牌上的負能量，恢復塔羅牌的靈敏度和純淨度。</p>
+<p>也可以使用月光淨化，利用滿月的魔力，將塔羅牌放在窗台或戶外，讓它們在月光下曬一整晚，吸收月亮的正能量，排除累積的負面磁場。或者，可以使用晶石淨化，使用具有強大淨化能力的晶石，如白水晶、紫水晶和黑曜石，將塔羅牌放在晶石上，或將晶石放在塔羅牌周圍，讓它們靜置幾個小時，吸收塔羅牌上的負能量，恢復塔羅牌的靈敏度和純淨度。</p>
 
-<p>最後，還可以使用禱告或冥想來淨化塔羅牌，進行一段短暫的禱告或冥想，集中意念，請求宇宙或守護靈幫助淨化塔羅牌，這種心靈上的清理方式，不僅能淨化塔羅牌，還能讓你與塔羅牌建立更深的連結，提升占卜的準確性。</p>
+<p>還可以使用禱告或冥想來淨化塔羅牌，進行一段短暫的禱告或冥想，集中意念，請求宇宙或守護靈幫助淨化塔羅牌，這種心靈上的清理方式，不僅能淨化塔羅牌，還能讓你與塔羅牌建立更深的連結，提升占卜的準確性。</p>
 
 <h2>塔羅牌可以轉讓給別人嗎？</h2>
 
