--- a/塔羅牌如何淨化/index.html
+++ b/塔羅牌如何淨化/index.html
@@ -99,13 +99,13 @@
 
 <p>選擇最適合自己的淨化方法是非常重要的，因為每個人都有不同的能量特質和需求。首先，需要考慮自己的能量狀態和塔羅牌的狀況。如果塔羅牌上的能量非常負面，可以選擇更強效的淨化方法，如使用水晶或陽光。</p>
 
-<p>另外，需要考慮自己的直覺和偏好。如果自己直覺地感覺塔羅牌有什麼不對勁，可以選擇更靈性的淨化方法，如使用冥想或呼吸。同時，也需要考慮塔羅牌的材質和狀況，因為不同的材質可能會影響淨化的效果。</p>
+<p>考慮自己的直覺和偏好。如果自己直覺地感覺塔羅牌有什麼不對勁，可以選擇更靈性的淨化方法，如使用冥想或呼吸。同時，也需要考慮塔羅牌的材質和狀況，因為不同的材質可能會影響淨化的效果。</p>
 
 <p>在選擇淨化方法時，也需要考慮自己的需求和塔羅牌的用途。如果需要進行深入的淨化，可以選擇更強烈的淨化方法，如使用蠟燭或聖水。如果只需要進行輕微的淨化，可以選擇更溫和的淨化方法，如使用月光或薰香。</p>
 
-<p>此外，也需要注意淨化的頻率。塔羅牌需要定期淨化，以保持其能量的平衡和清潔。可以在每次使用前淨化一次，或是在感覺塔羅牌有什麼不對勁時淨化。</p>
+<p>注意淨化的頻率。塔羅牌需要定期淨化，以保持其能量的平衡和清潔。可以在每次使用前淨化一次，或是在感覺塔羅牌有什麼不對勁時淨化。</p>
 
-<p>最後，選擇適合自己的淨化工具也非常重要。不同的淨化工具具有不同的效果，例如月光淨化可以幫助塔羅牌吸收月亮的正能量，晶石淨化可以幫助塔羅牌清除累積的負面能量。可以根據自己的需求選擇適合的淨化工具。</p>
+<p>選擇適合自己的淨化工具也非常重要。不同的淨化工具具有不同的效果，例如月光淨化可以幫助塔羅牌吸收月亮的正能量，晶石淨化可以幫助塔羅牌清除累積的負面能量。可以根據自己的需求選擇適合的淨化工具。</p>
 
 <h3>常見的淨化方法</h3>
 
@@ -137,25 +137,11 @@
 
 <p>塔羅牌淨化是一個非常重要的步驟，可以幫助塔羅牌恢復到最初的狀態，去除之前的能量殘留。要確保塔羅牌淨化的效果，需要選擇適合自己的淨化方法。有些人喜歡使用薰香淨化法，利用植物燒出的煙燻牌卡；有些人則喜歡使用火焰淨化法，點顆小蠟燭，在火焰上繞幾圈就好。</p>
 
-<p>另外，音樂淨化法也是一个不錯的選擇。利用音樂的頻率為牌卡調頻，可以播放特定調頻音樂或使用薩滿鼓、沙鈴等。音樂淨化需要較長時間，但可以幫助牌卡恢復平衡。日曬淨化法也是一个簡單有效的方法，讓牌卡攤開做日光浴，陽光是強大的淨化光源，可以清除牌卡上的負面能量。</p>
+<p>音樂淨化法也是一个不錯的選擇。利用音樂的頻率為牌卡調頻，可以播放特定調頻音樂或使用薩滿鼓、沙鈴等。音樂淨化需要較長時間，但可以幫助牌卡恢復平衡。日曬淨化法也是一个簡單有效的方法，讓牌卡攤開做日光浴，陽光是強大的淨化光源，可以清除牌卡上的負面能量。</p>
 
 <p>不論選擇哪種淨化方法，重要的是要相信自己所選擇的方法。只要是你自己相信的淨化方式，就可以幫助塔羅牌淨化。同時，定期淨化牌卡也很重要，以清除牌卡上累積的外來能量。可以通過簡單的儀式，如有節奏地洗牌、用牌卡輕敲桌面，或在手中將牌卡展開成扇形，輕吹牌卡邊緣等方式進行。</p>
 
 <p>牌卡的保養也很重要，應該保持牌卡的潔淨，並在不使用時加以保護。這樣可以確保塔羅牌淨化的效果，讓牌卡恢復到最初的狀態，提供更準確的解讀。</p>
-
-<h3>塔羅牌淨化的方法</h3>
-
-<p>以下是一些常見的塔羅牌淨化方法：</p>
-
-<ul>
-  <li>薰香淨化法</li>
-  <li>火焰淨化法</li>
-  <li>音樂淨化法</li>
-  <li>日曬淨化法</li>
-  <li>自選淨化法</li>
-</ul>
-
-<p>每種方法都有其特點和優點，可以根據個人需求和牌卡的狀況選擇適合的方法進行淨化。</p>
 
                       <br>
                       <div class="recommended" id="recommended">
