--- a/塔羅牌邪門/index.html
+++ b/塔羅牌邪門/index.html
@@ -87,7 +87,7 @@
 
 <p>塔羅牌占卜是一種神秘的工具，可以幫助人們了解未來的發展趨勢，但是使用塔羅牌占卜也有一些禁忌需要注意。首先，不可於24小時內重複占卜完全相同的問題，因為重複占卜相同的問題會導致占卜結果不準確，甚至會產生相反的效果。</p>
 
-<p>另外，不可在一次洗牌中問多條問題，因為塔羅占卜需要專注和清晰的思緒，同時問多條問題會導致思緒混亂，占卜結果也不會準確。塔羅占卜最多只占卜到未來12個月的事，超過12個月的事是無法占卜的。</p>
+<p>不可在一次洗牌中問多條問題，因為塔羅占卜需要專注和清晰的思緒，同時問多條問題會導致思緒混亂，占卜結果也不會準確。塔羅占卜最多只占卜到未來12個月的事，超過12個月的事是無法占卜的。</p>
 
 <p>在進行塔羅牌占卜時，也需要注意自己的精神狀態和態度。身心狀態不佳時不宜測算，因為測算塔羅牌需要耗費精神和體力。如果精神狀態不好、情緒不好時進行塔羅牌測算，那麼這個不良的狀態可能會影響到塔羅牌的抽牌，以及影響整個塔羅牌測算的過程。</p>
 
@@ -97,7 +97,7 @@
 
 <p>塔羅牌占卜不能用於預測死亡、災難或其他極端負面事件的問題，因為這可能導致不必要的恐慌或誤解。塔羅牌應用於指導和反思，而不是替他人做出生命中重大的決策。</p>
 
-<p>最後，塔羅牌占卜需要保持牌與自己的個人能量的連結。許多塔羅牌使用者認為他們的牌應該只有他們自己觸摸，以保持牌與自己的個人能量的連結。同時，也需要不斷學習和尊重塔羅牌背後的傳統和象徵意義，這有助於更深入地理解和尊重這種實踐。</p>
+<p>塔羅牌占卜需要保持牌與自己的個人能量的連結。許多塔羅牌使用者認為他們的牌應該只有他們自己觸摸，以保持牌與自己的個人能量的連結。同時，也需要不斷學習和尊重塔羅牌背後的傳統和象徵意義，這有助於更深入地理解和尊重這種實踐。</p>
 
 <h2>塔羅牌會吸引靈異現象嗎？</h2>
 
